--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <nav id="nav-header">
         <div id="background-image">
-          <img src="/images/studying.jpg" width="100%" alt="background image" />
+          <img src="/universitiesireland/images/studying.jpg" width="100%" alt="background image" />
           <div class="Uname">
             <hr style="height: 5px; width:12%;">
             <h2>universities</h2>
@@ -86,7 +86,7 @@
         <div id="navbar">
       <div id="decade">
           <div class="image1">
-         <img src="/images/decade.png" alt="decade" />
+         <img src="/universitiesireland/images/decade.png" alt="decade" />
          </div> 
           <ul>
         <li><a href="https://universitiesireland.ie/category/conferences/"
@@ -102,7 +102,7 @@
       </div>
       <div id="bursaries">
           <div class="image2">
-              <img src="/images/scholarships.jpg" alt="scholarships" />
+              <img src="/universitiesireland/images/scholarships.jpg" alt="scholarships" />
             </div>
         <li><a href="https://universitiesireland.ie/bursaries-scholarships/"
           >bursaries & scholarships</a></li>
@@ -117,7 +117,7 @@
       </div>
       <div id="scholars">
         <div class="image3">
-            <img src="/images/scholars.png" alt="scholars" />
+            <img src="/universitiesireland/images/scholars.png" alt="scholars" />
         </div>
         <li><a href="https://universitiesireland.ie/scholars-at-risk/"
           >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspScholars at Risk</a></li>
