--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           <ul>
             <li>Secretariat provided by the Centre for Cross Border Studies</li>
             <li>
-              <img src="/images/economy.jpg" alt="economy" />
+              <img src="/universitiesireland/images/economy.jpg" alt="economy" />
             </li>
           </ul>
         </div>
